# califa-cards

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SPEC.md  pyproject.toml
.github/assets/: generate_hero_card.py
.github/workflows/: ci.yml
ci/: skill-card-scan.yml
examples/textual/: .skillcard.toml  SKILL.md  card-review.md  card.authored.yaml  card.json  scan.json  skill-card.md
examples/textual/evals/: evals.json
schema/: schema.py
skillcard/: __init__.py  build_card.py  cli.py  discover.py  gate.py  hashing.py  render.py
skillcard/harness/: command.py  functional.py
templates/: skill-card.md.j2
tests/: test_badges.py  test_build_card.py  test_cli.py  test_cli_build.py  test_cli_eval.py  test_discover.py  test_examples.py  test_gate.py  test_harness_assemble.py  test_harness_functional.py  test_harness_isolation.py  test_harness_optimize.py  test_harness_pacing.py  test_harness_reliability.py  test_hashing.py  test_render.py  test_review.py  test_schema.py  test_scorecard.py
worker/: README.md
